  called by linux when click is running, creating possible race conditions.
  Note: in polling mode, if the click thread yields to other processes, timers
  will not get called until the click thread runs again.

* Added Rewriter, MappingCreator, and IPMirror elements for rewriting
  TCP/IP and UDP/IP streams.

* Added MarkIPHeader, CheckTCPHeader, and CheckUDPHeader elements.

* Fixed FromDump.

* Added optional queue names to RED.

* Removed `is_a()' and `is_a_cast()' methods of Element. The new way,
  `cast()', allows arbitrary interfaces.


Version 1.0.1   28.Feb.2000

* Fixed Makefile bugs; Linux module installs properly now. Problem reported
  by Joe Elliott <joe@inetd.com>.


Version 1.0   25.Feb.2000

* Added polling support. Result: 4-5 times better peak performance. The
  optimization tools can get it up to 6 times better (435,000 64-byte
  packets per second).

* Replaced work list with stride scheduler.

* In the Linux kernel, Click now runs in a kernel thread.

* Removed packet-upstream events and the associated processing in Queue,
  Shaper, and so forth. The stride scheduler solves the same problem more
  elegantly.

* Added `click-specialize' tool.

* Added `click-uninstall' tool.

* Added dynamic IP routing table element (LookupIPRoute2).

* Added stride scheduling packet scheduler element (StrideSched).

* Added PeekHandlers and PokeHandlers elements so you can test read and
  write handlers at user level.

* Fixed lexer bug: compound elements with `{' are accepted everywhere.

* Added arguments to compound elements.

* Rearranged directory structure. (Include files placed in
  PREFIX/include/click, not directly in PREFIX/include.)

* Improved several elements, including ARPQuerier.

* Changed interface for registering handlers. See
  `elements/standard/red.cc' or the Element.3 manual page for examples.

* Many other changes, bug fixes and improvements.


Version 0.6   11.Dec.1999
